--- a/src/app/views/home/home.ejs
+++ b/src/app/views/home/home.ejs
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Sequelize and GraphQl Test</title>
+
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+    
 </head>
 <body>
-  <h1>Home ready</h1>
+  <div class="container mt-5">
+    <h1 class="text-center mb-5">Sequelize and GraphQL Test</h1>
+    <a class="btn btn-primary d-block mt-5" href="/users">Manage users</a>
+  </div>
 </body>
 </html>
