Se testea el correcto funcionamiento de sequelize y la db con las rutas y una vista tomada de un ejercicio anterior. Todo OK

--- a/src/app/views/home/home.ejs
+++ b/src/app/views/home/home.ejs
@@ -9,13 +9,14 @@
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
 
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
     
 </head>
 <body>
-  <div class="container mt-5">
-    <h1 class="text-center mb-5">Sequelize and GraphQL Test</h1>
-    <a class="btn btn-primary d-block mt-5" href="/users">Manage users</a>
+  <div class="container mt-5 text-center">
+    <h1>Sequelize and GraphQL Test</h1>
+    <a class="btn btn-primary mt-5" href="/users">Manage users</a>
+    <a class="btn btn-secondary mt-5" href="/users/old">Manage users with old view</a>
   </div>
 </body>
 </html>
